Wat stijltjes want het zag er uit als "een website uit 1998"

--- a/profile.html
+++ b/profile.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>Mijn profiel</title>
+		<link rel="stylesheet" href="index.css">
 	</head>
 	<body>
 		<h1>Persoonlijke Informatie</h1>
@@ -17,8 +18,8 @@
 		<p><b>Welk profiel heb je op je vooropleiding afgerond?</b><br>EM</p>
 		<p><b>Heb je al eerder op een HBO of universiteit een opleiding gevolgd?</b><br>Nee</p>
 		<p><b>Welke studiekeuzeactiviteiten heb je uitgevoerd? (je kunt meerdere antwoorden kiezen)</b><br>
-		<input type="checkbox" disabled checked />Open dag<br>
-		<input type="checkbox" disabled checked />Online voorlichting</p>
+		☑ Open dag<br>
+		☑ Online voorlichting</p>
 		<p><b>Wat zie je jezelf na het voltooien van de opleiding gaan doen? Welk beroep of functie heeft je interesse? Waarom? Wat hoop je over vier jaar geleerd te hebben?</b><br><ul><li>Geen idee</li><li>Geen idee</li><li>Omdat ik geen idee heb</li><li>ICT</li></ul></p>
 		<hr />
 		<h1>Buitenschoolse Activiteiten</h1>
