--- a/profile.html
+++ b/profile.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<h1>Persoonlijke Informatie</h1>
+		<figure id="pasfoto"><img src="Pasfoto000101015.jpg"> <figcaption>Een pasfoto ofzo</figcaption></figure>
 		<i>De &quot;Wie ben ik?&quot;-enquete heeft geen kopjes - of: niet als je de antwoorden bekijkt - dus ik weet niet waar dit stopt.</i>
 		<p><b>Wat is je naam?</b><br>Adriaan Zwemer</p>
 		<p><b>Wat is je leeftijd?</b><br>18 (<i>bij invullen enquete 17</i>)</p>
