--- a/profile.html
+++ b/profile.html
@@ -5,37 +5,76 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>Mijn profiel</title>
-		<link rel="stylesheet" href="index.css">
+		<link rel="stylesheet" href="/style/index.css">
 	</head>
 	<body>
-		<h1>Persoonlijke Informatie</h1>
-		<figure id="pasfoto"><img src="Pasfoto000101015.jpg"> <figcaption>Een pasfoto ofzo</figcaption></figure>
-		<i>De &quot;Wie ben ik?&quot;-enquete heeft geen kopjes - of: niet als je de antwoorden bekijkt - dus ik weet niet waar dit stopt.</i>
-		<p><b>Wat is je naam?</b><br>Adriaan Zwemer</p>
-		<p><b>Wat is je leeftijd?</b><br>18 (<i>bij invullen enquete 17</i>)</p>
-		<p><b>Wat is je woonplaats?</b><br>Serooskerke</p>
-		<p><b>Wat is je woonsituatie?</b><br>Bij ouders/verzorgers</p>
-		<p><b>Welke vooropleiding heb je afgerond?</b><br>VWO (<i>tijdens invullen enquete nog niet</i>)</p>
-		<p><b>Welk profiel heb je op je vooropleiding afgerond?</b><br>EM</p>
-		<p><b>Heb je al eerder op een HBO of universiteit een opleiding gevolgd?</b><br>Nee</p>
-		<p><b>Welke studiekeuzeactiviteiten heb je uitgevoerd? (je kunt meerdere antwoorden kiezen)</b><br>
-		☑ Open dag<br>
-		☑ Online voorlichting</p>
-		<p><b>Wat zie je jezelf na het voltooien van de opleiding gaan doen? Welk beroep of functie heeft je interesse? Waarom? Wat hoop je over vier jaar geleerd te hebben?</b><br><ul><li>Geen idee</li><li>Geen idee</li><li>Omdat ik geen idee heb</li><li>ICT</li></ul></p>
-		<hr />
-		<h1>Buitenschoolse Activiteiten</h1>
-		<i>Ik neem aan dat dat deel hier begint.</i>
-		<p><b>Heb je een (bij)baan?</b><br>Nee</p>
-		<p><b>Hoeveel uur in de week besteed je aan je (bij)baan?</b><br>0-5</p>
-		<p><b>Heb je bijvoorbeeld een hobby of interesse die je zou willen delen?</b><br>Nee</p>
-		<i>Ik neem aan dat dit de laatste vraag van dit deel was, want hiernaa begint een SWOT-analyse.</i>
-		<hr />
-		<details><summary>Bericht van <b>Daan de Waard</b> als beoordeling van deze antwoorden:</summary><pre>Hoi Adriaan. Welkom bij de HZ HBO-ICT opleiding en bedankt voor het invullen van de Wie-ben-ik vragenlijst. Ik heb je antwoorden doorgenomen en het viel mij op dat je antwoorden laten weten dat je nog niet weet wie je bent en wat je uiteindelijk wilt gaan doen. Dat is geen probleem. Er is tijdens de opleiding genoeg tijd om jezelf te ontplooien, en we gaan je daarbij uiteraard helpen. Het is wel goed om daar zo snel mogelijk mee te beginnen. Als je beter weet wat je wilt draagt dat in mijn ervaring bij aan de motivatie om de benodigde tijd en aandacht daarin te investeren. Dus wellicht is het een goed idee om vooraf eens te onderzoeken wat aan ICT je interesseert. Praat er eens met mensen uit het vakgebied over. Wellicht ken jij of iemand anders uit je omgeving iemand.
+		<nav>
+			<div><a href="/index.html">home</a></div>
+			<div><a href="/profile.html" data-huidig>profiel</a></div>
+			<div><a href="/faq.html">FAQ</a></div>
+			<div><a href="/dashboard.html">dashboard</a></div>
+			<div><a href="/blog.html">blog</a></div>
+		</nav>
+		<main>
+			<aside class="linkerlinks">
+				Linkjes:
+				<ul>
+					<li><a href="https://github.com/JA-Zw" target="_blank">GitHub</a></li>
+					<li><a href="https://github.com/adriaan1313" target="_blank">persoonlijke gh</a></li>
+					<li><a href="https://youtube.com/@AdriaanZwemer" target="_blank">YouTube</a></li>
+					<li><a href="https://discord.com/users/220821856976896001/" target="_blank">Discord</a></li>
+				</ul>
+			</aside>
+			<article>
+				<h1>Profiel</h1>
+				<p>Hallo, ik ben Adriaan Zwemer, ik schrijf dit omdat ik op de hz zit en dit een opdracht is. Eigenlijk ben ik het niet eens met dit openbaar op het internet te zetten, dus kan je zelf opzoeken waar ik woon en dat soort dingen. Veel specifieker dan <i>Zeeland</i> ga ik niet zijn.</p>
+				<p>Ik zit nu op de Hoogeschool Zeeland, dat is waar deze opdracht voor is, daarvoor heb ik VWO gedaan op het Nehalennia (Sted. Scholengemeenschap Middelburg). Ik ben ook <a href="https://www.google.com/search?q=Trekrieve">het gezicht van de trekrieve</a>, maar dat was langer geleden.<br>Ach, er moet ook een lijstje zijn...</p>
+				<ul>
+					<li>Zelf heb ik geen katten, maar Muis (van de fam. Hasan) en Mia <span style="font-family: 'Times New Roman', Times, serif;">II</span> (van de fam. Jaguszczak) komen af en toe langs.</li>
+					<li>Vroeger hadden we ook parkieten, maar die zijn niet meer.</li>
+					<li>Ik speel wel eens Minecraft, daar heet ik Bunnygamers, ja, dat is meervoudig.</li>
+				</ul>
+			</article>
+			<hr />
+			<article>
+				<h2>Persoonlijke Informatie</h2>
+				<figure class="figuurrechts"><img src="/images/Pasfoto000101015.jpg" alt="Een pasfoto"> <figcaption>Een pasfoto ofzo</figcaption></figure>
+				<i>De &quot;Wie ben ik?&quot;-enquete heeft geen kopjes - of: niet als je de antwoorden bekijkt - dus ik weet niet waar dit stopt.</i>
+				<p><b>Wat is je naam?</b><br>Adriaan Zwemer</p>
+				<p><b>Wat is je leeftijd?</b><br>18 (<i>bij invullen enquete 17</i>)</p>
+				<p><b>Wat is je woonplaats?</b><br>Serooskerke</p>
+				<p><b>Wat is je woonsituatie?</b><br>Bij ouders/verzorgers</p>
+				<p><b>Welke vooropleiding heb je afgerond?</b><br>VWO (<i>tijdens invullen enquete nog niet</i>)</p>
+				<p><b>Welk profiel heb je op je vooropleiding afgerond?</b><br>EM</p>
+				<p><b>Heb je al eerder op een HBO of universiteit een opleiding gevolgd?</b><br>Nee</p>
+				<p><b>Welke studiekeuzeactiviteiten heb je uitgevoerd? (je kunt meerdere antwoorden kiezen)</b><br>
+				☑ Open dag<br>
+				☑ Online voorlichting</p>
+				<p><b>Wat zie je jezelf na het voltooien van de opleiding gaan doen? Welk beroep of functie heeft je interesse? Waarom? Wat hoop je over vier jaar geleerd te hebben?</b></p><ul><li>Geen idee</li><li>Geen idee</li><li>Omdat ik geen idee heb</li><li>ICT</li></ul>
+			</article>
+			<hr />
+			<article>
+				<h2>Buitenschoolse Activiteiten</h2>
+				<i>Ik neem aan dat dat deel hier begint.</i>
+				<p><b>Heb je een (bij)baan?</b><br>Nee</p>
+				<p><b>Hoeveel uur in de week besteed je aan je (bij)baan?</b><br>0-5</p>
+				<p><b>Heb je bijvoorbeeld een hobby of interesse die je zou willen delen?</b><br>Nee</p>
+				<i>Ik neem aan dat dit de laatste vraag van dit deel was, want hiernaa begint een SWOT-analyse.</i>
+			</article>
+			<hr />
+			<article>
+				<details><summary>Bericht van <b>Daan de Waard</b> als beoordeling van deze antwoorden:</summary><pre class="bericht">Hoi Adriaan. Welkom bij de HZ HBO-ICT opleiding en bedankt voor het invullen van de Wie-ben-ik vragenlijst. Ik heb je antwoorden doorgenomen en het viel mij op dat je antwoorden laten weten dat je nog niet weet wie je bent en wat je uiteindelijk wilt gaan doen. Dat is geen probleem. Er is tijdens de opleiding genoeg tijd om jezelf te ontplooien, en we gaan je daarbij uiteraard helpen. Het is wel goed om daar zo snel mogelijk mee te beginnen. Als je beter weet wat je wilt draagt dat in mijn ervaring bij aan de motivatie om de benodigde tijd en aandacht daarin te investeren. Dus wellicht is het een goed idee om vooraf eens te onderzoeken wat aan ICT je interesseert. Praat er eens met mensen uit het vakgebied over. Wellicht ken jij of iemand anders uit je omgeving iemand.
 
 Voor de rest wens ik je een goede zomer en zien we je volgend jaar. Als er nog iets is wat we voor je kunnen betekenen neem dan gerust weer contact op.
 
 Groet,
 
 Daan de Waard</pre></details>
+			</article>
+			<hr />
+			<article>
+				<p>Je zou ook meer over mij kunnen vinden door mijn naam in google te typen, of door naar <a href="https://adriaan1313.github.io/">adriaan1313.github.io</a> te gaan.</p>
+			</article>
+		</main>
 	</body>
 </html>
