--- a/blog.html
+++ b/blog.html
@@ -4,27 +4,29 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<meta name="description" content="Een overzicht van blogposts." />
 		<title>Blog</title>
 		<link rel="stylesheet" href="/style/index.css">
 	</head>
 	<body>
-        <nav>
+		<nav>
 			<div><a href="/index.html">home</a></div>
 			<div><a href="/profile.html">profiel</a></div>
 			<div><a href="/faq.html" >FAQ</a></div>
 			<div><a href="/dashboard.html">dashboard</a></div>
 			<div><a href="/blog.html" data-huidig>blog</a></div>
-        </nav>
-        <main>
-            <article>
-                <h1>Blogposts</h1>
+		</nav>
+		<main>
+			<article>
+				<h1>Blogposts</h1>
 				<ol>
 					<li><details><summary>Studiekeuze (<a href="/blog/skc.html">lees</a>)</summary>Nou, ik heb voor HBO-ICT gekozen...</details></li>
 					<li><details><summary>SWOT-analyse (<a href="/blog/swot.html">lees</a>)</summary>Een SWOT-analyse is wat onzin die we moesten invullen...</details></li>
 					<li><details><summary>Ervaring (<a href="/blog/ervaring.html">lees</a>)</summary>Ik heb mijn pws bij informatica gedaan...</details></li>
 					<li><details><summary>Feedback (<a href="/blog/feedback.html">lees</a>)</summary>De feedback van Daan de Waard heeft erg weinig entertjes...</details></li>
+					<li><details><summary>Het vak ICT (<a href="/blog/vak.html">lees</a>)</summary>ICT is een belangrijk vak...</details></li>
 				</ol>
-            </article>
-        </main>
+			</article>
+		</main>
 	</body>
 </html>
