--- a/faq.html
+++ b/faq.html
@@ -4,21 +4,22 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<meta name="description" content="Een pagina met vaalgestelde vragen en hun antwoorden." />
 		<title>FAQ</title>
 		<link rel="stylesheet" href="/style/index.css">
 	</head>
 	<body>
-        <nav>
+		<nav>
 			<div><a href="/index.html">home</a></div>
 			<div><a href="/profile.html">profiel</a></div>
 			<div><a href="/faq.html" data-huidig>FAQ</a></div>
 			<div><a href="/dashboard.html">dashboard</a></div>
 			<div><a href="/blog.html">blog</a></div>
-        </nav>
-        <main>
-            <article>
+		</nav>
+		<main>
+			<article>
 				<figure class="figuurrechts" style="width:80px"><img src="/images/hz-logo.svg" width="80" alt="Het logo van de HZ"><figcaption>Het logo van de HZ</figcaption></figure>
-                <h1>Veelgestelde vragen</h1>
+				<h1>Veelgestelde vragen</h1>
 				<hr>
 				<section>
 					<details><summary><b>Hoe print ik op de hz?</b></summary>Ga naar <a href="https://hz.mynetpay.nl/">https://hz.mynetpay.nl/</a>. Log daar in met je schoolaccount (zonder @hz.nl).<br>Je kan een bestand uploaden bij <i>WebPrint</i> of de printer installeren bij <i>MobilityPrint</i>.<br><b>Let op! Om te printen moet je printtegoed hebben.</b><br>Voor meer informatie, ga naar het <a href="https://hzuniversity.topdesk.net/tas/public/ssp/content/detail/service?unid=bd81be42f243450e95e510949a496145">selfservice-portaal</a>.</details>
@@ -43,7 +44,7 @@
 				<section>
 					Stel nog maar eens wat vragen ofzo.
 				</section>
-            </article>
-        </main>
+			</article>
+		</main>
 	</body>
 </html>
