--- a/profile.html
+++ b/profile.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<meta name="description" content="Het profiel van Adriaan Zwemer." />
 		<title>Mijn profiel</title>
 		<link rel="stylesheet" href="/style/index.css">
 	</head>
@@ -28,11 +29,13 @@
 			<article>
 				<h1>Profiel</h1>
 				<p>Hallo, ik ben Adriaan Zwemer, ik schrijf dit omdat ik op de hz zit en dit een opdracht is. Eigenlijk ben ik het niet eens met dit openbaar op het internet te zetten, dus kan je zelf opzoeken waar ik woon en dat soort dingen. Veel specifieker dan <i>Zeeland</i> ga ik niet zijn.</p>
-				<p>Ik zit nu op de Hoogeschool Zeeland, dat is waar deze opdracht voor is, daarvoor heb ik VWO gedaan op het Nehalennia (Sted. Scholengemeenschap Middelburg). Ik ben ook <a href="https://www.google.com/search?q=Trekrieve">het gezicht van de trekrieve</a>, maar dat was langer geleden.<br>Ach, er moet ook een lijstje zijn...</p>
+				<p>Ik zit nu op de Hoogeschool Zeeland, dat is waar deze opdracht voor is, daarvoor heb ik VWO gedaan op het Nehalennia (Sted. Scholengemeenschap Middelburg). Ik ben ook <a href="https://www.google.com/search?q=Trekrieve">het gezicht van de trekrieve</a>, maar dat was langer geleden.<br>Ach, er moet ook een lijstje zijn, wat random feiten en meningen dan...</p>
 				<ul>
 					<li>Zelf heb ik geen katten, maar Muis (van de fam. Hasan) en Mia <span style="font-family: 'Times New Roman', Times, serif;">II</span> (van de fam. Jaguszczak) komen af en toe langs.</li>
 					<li>Vroeger hadden we ook parkieten, maar die zijn niet meer.</li>
 					<li>Ik speel wel eens Minecraft, daar heet ik Bunnygamers, ja, dat is meervoudig.</li>
+					<li>De beste TV-programma's zijn Doctor Who en Marvel's Agents of S.H.I.E.L.D..</li>
+					<li>Katten > honden.</li>
 				</ul>
 			</article>
 			<hr />
