--- a/dashboard.html
+++ b/dashboard.html
@@ -4,21 +4,22 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<meta name="description" content="Een pagina waarop te zien is hoever Adriaan is met zijn opleiding." />
 		<title>Dashboard</title>
 		<link rel="stylesheet" href="/style/index.css">
 	</head>
 	<body>
-        <nav>
+		<nav>
 			<div><a href="/index.html">home</a></div>
 			<div><a href="/profile.html">profiel</a></div>
 			<div><a href="/faq.html">FAQ</a></div>
 			<div><a href="/dashboard.html" data-huidig>dashboard</a></div>
 			<div><a href="/blog.html">blog</a></div>
-        </nav>
-        <main>
-            <article>
+		</nav>
+		<main>
+		<article>
 				<figure class="figuurrechts"><img src="/images/Grafiekje.svg" style="background-color:white;" alt="Een grafiekje zonder data" /><figcaption><span style="color:#00aeef;">█</span> Hoop<br><span style="color:#ff0025;">█</span> Veilig voor NBSA</figcaption></figure>
-                <h1>Dashboard</h1>
+				<h1>Dashboard</h1>
 				<table>
 					<tbody>
 					<tr>
@@ -58,7 +59,7 @@
 						<td>X</td>
 					</tr>
 					<tr>
-						<td>project presentatie</td>
+						<td>presentatie</td>
 						<td>50</td>
 						<td>5</td>
 						<td>X</td>
@@ -67,19 +68,60 @@
 						<td colspan="5"><center><b>2<sup>e</sup> Semester</b></center></td>
 					</tr>
 						<td>BCIB</td>
-						<td colspan="3" rowspan="4"><center>?</center></td>
+						<td>video</td>
+						<td>?</td>
+						<td>2.5</td>
 						<td>X</td>
 					</tr>
 					<tr>
 						<td>PPD-E</td>
+						<td>mondeling</td>
+						<td>?</td>
+						<td>12.5</td>
 						<td>X</td>
 					</tr>
 					<tr>
-						<td>FPR1</td>
+						<td rowspan="4">FPR1</td>
+						<td>case study</td>
+						<td>?</td>
+						<td>4</td>
 						<td>X</td>
 					</tr>
 					<tr>
-						<td>FPR 2</td>
+						<td>toets</td>
+						<td>?</td>
+						<td>1</td>
+						<td>X</td>
+					</tr>
+					<tr>
+						<td>presentatie</td>
+						<td>?</td>
+						<td>2.5</td>
+						<td>X</td>
+					</tr>
+					<tr>
+						<td>portfolio</td>
+						<td>?</td>
+						<td>2.5</td>
+						<td>X</td>
+					</tr>
+					<tr>
+						<td rowspan="3">FPR 2</td>
+						<td>presentatie</td>
+						<td>?</td>
+						<td>2.5</td>
+						<td>X</td>
+					</tr>
+					<tr>
+						<td>portfolio (project)</td>
+						<td>?</td>
+						<td>2.5</td>
+						<td>X</td>
+					</tr>
+					<tr>
+						<td>portfolio</td>
+						<td>?</td>
+						<td>5</td>
 						<td>X</td>
 					</tr>
 					<tr>
@@ -92,7 +134,7 @@
 					</tbody>
 				</table>
 				<p>Behaalde studiepunten: <b>0</b>/60EP</p>
-            </article>
-        </main>
+			</article>
+		</main>
 	</body>
 </html>
