nog wat ongecommitte dingen nu wel gecommit

--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
 		<main>
 			<article>
 				<h1>Blogposts</h1>
-				<ol>
+				<ol><!-- Helaas werken deze details-elementen niet in IE 😢 -->
 					<li><details><summary>Studiekeuze (<a href="/blog/skc.html">lees</a>)</summary>Nou, ik heb voor HBO-ICT gekozen...</details></li>
 					<li><details><summary>SWOT-analyse (<a href="/blog/swot.html">lees</a>)</summary>Een SWOT-analyse is wat onzin die we moesten invullen...</details></li>
 					<li><details><summary>Ervaring (<a href="/blog/ervaring.html">lees</a>)</summary>Ik heb mijn pws bij informatica gedaan...</details></li>
