--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					Nou, dit is de homepagina! Ik doe ICT omdat ik al best lang aan het programmeren ben. In <a href="https://glaze-donut-5a5.notion.site/Assignment-Specification-661c5ac5d7494328a58be61d00dd41e4#cc1ba35721f641519cd8ae4df9069380">de opdracht</a> staat dat we op moeten schrijven wat we de afgelopen periode hebben geleerd, maar de periode is net twee dagen begonnen, dus nee.
 				</p>
 				<p>
-					Deze pagina is niet per sé heel nuttig, zoals heel deze web-site. De opdracht vraagt creatief schrijven, wat ik helemaal niet kan. Verder moet ik plaatjes en een lijstje hebben, dus krijgt u nu een ranking van de nummers één tot vier. Daarna is het tijd voor wat foto's.
+					Deze pagina is niet per sé heel nuttig, zoals heel deze web-site. De opdracht vraagt creatief schrijven, wat ik helemaal niet kan. Verder moet ik plaatjes en een lijstje hebben, dus krijgt u nu een ranking van de <a href="https://nl.wikipedia.org/wiki/Nummer">nummers</a> één tot vier. Daarna is het tijd voor wat foto's.
 				</p>
 				<ol>
 					<li>Eén</li>
