Maaaaaandag week twee

--- a/profile.html
+++ b/profile.html
@@ -59,7 +59,7 @@
 			<article>
 				<h2>Buitenschoolse Activiteiten</h2>
 				<i>Ik neem aan dat dat deel hier begint.</i>
-				<p><b>Heb je een (bij)baan?</b><br>Nee</p>
+				<p><b>Heb je een (bij)baan?</b><br>Ja, esv, maar vrij weinig</p>
 				<p><b>Hoeveel uur in de week besteed je aan je (bij)baan?</b><br>0-5</p>
 				<p><b>Heb je bijvoorbeeld een hobby of interesse die je zou willen delen?</b><br>Nee</p>
 				<i>Ik neem aan dat dit de laatste vraag van dit deel was, want hiernaa begint een SWOT-analyse.</i>
