--- a/dashboard.html
+++ b/dashboard.html
@@ -23,117 +23,128 @@
 				<table>
 					<tbody>
 					<tr>
+						<th>Blok</th>
 						<th>Vak</th>
-						<th>Meer</th>
+						<th>Toets</th>
 						<th>Week (inhalen)</th>
 						<th>EC</th>
-						<th>Behaald</th>
+						<th>Cijfer</th>
 					</tr>
 					<tr>
-						<td colspan="5"><center><b>1<sup>e</sup> Semester</b></center></td>
+						<td colspan="6"><center><b>1<sup>e</sup> Semester</b></center></td>
 					</tr>
 					<tr>
-						<td>PCO</td>
+						<td rowspan="3" data-huidig>1</td>
+						<td data-huidig>PCO</td>
 						<td>presentatie</td>
 						<td>41/42 (44)</td>
 						<td>2.5</td>
-						<td>X</td>
-					</tr>
-					<tr>
-						<td>PBA</td>
-						<td rowspan="2">toets</td>
-						<td rowspan="2">44 (50)</td>
-						<td>5</td>
-						<td>X</td>
+						<td></td>
 					</tr>
 					<tr>
 						<td>CSB</td>
+						<td rowspan="2">toets</td>
+						<td rowspan="2">44 (50)</td>
 						<td>5</td>
-						<td>X</td>
+						<td></td>
 					</tr>
 					<tr>
+						<td>PBA</td>
+						<td>5</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>1/Hele jaar</td>
+						<td>PPD-E</td>
+						<td>mondeling</td>
+						<td>?</td>
+						<td>12.5</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td rowspan="2">2</td>
 						<td rowspan="2">OOP</td>
 						<td>case study</td>
 						<td>50 (5)</td>
 						<td>5</td>
-						<td>X</td>
+						<td></td>
 					</tr>
 					<tr>
 						<td>presentatie</td>
 						<td>50</td>
 						<td>5</td>
-						<td>X</td>
+						<td></td>
 					</tr>
 					<tr>
-						<td colspan="5"><center><b>2<sup>e</sup> Semester</b></center></td>
+						<td colspan="6"><center><b>2<sup>e</sup> Semester</b></center></td>
 					</tr>
+						<td rowspan="5">3</td>
 						<td>BCIB</td>
 						<td>video</td>
 						<td>?</td>
 						<td>2.5</td>
-						<td>X</td>
-					</tr>
-					<tr>
-						<td>PPD-E</td>
-						<td>mondeling</td>
-						<td>?</td>
-						<td>12.5</td>
-						<td>X</td>
+						<td></td>
 					</tr>
 					<tr>
 						<td rowspan="4">FPR1</td>
 						<td>case study</td>
 						<td>?</td>
 						<td>4</td>
-						<td>X</td>
+						<td></td>
 					</tr>
 					<tr>
 						<td>toets</td>
 						<td>?</td>
 						<td>1</td>
-						<td>X</td>
+						<td></td>
 					</tr>
 					<tr>
 						<td>presentatie</td>
 						<td>?</td>
 						<td>2.5</td>
-						<td>X</td>
+						<td></td>
 					</tr>
 					<tr>
 						<td>portfolio</td>
 						<td>?</td>
 						<td>2.5</td>
-						<td>X</td>
+						<td></td>
 					</tr>
 					<tr>
+						<td rowspan="3">4</td>
 						<td rowspan="3">FPR 2</td>
 						<td>presentatie</td>
 						<td>?</td>
 						<td>2.5</td>
-						<td>X</td>
+						<td></td>
 					</tr>
 					<tr>
 						<td>portfolio (project)</td>
 						<td>?</td>
 						<td>2.5</td>
-						<td>X</td>
+						<td></td>
 					</tr>
 					<tr>
 						<td>portfolio</td>
 						<td>?</td>
 						<td>5</td>
-						<td>X</td>
+						<td></td>
 					</tr>
 					<tr>
-						<td colspan="5"><center><b>Personality</b></center></td>
+						<td colspan="6"><center><b>Personality</b></center></td>
 					</tr>
-						<td colspan="3"><center>?</center></td>
-						<td>2.5</td>
-						<td>X</td>
+						<td rowspan="2">Hele Jaar</td>
+						<td colspan="3" rowspan="2"><center>?</center></td>
+						<td>1.25</td>
+						<td></td>
+					</tr>
+					</tr>
+						<td>1.25</td>
+						<td></td>
 					</tr>
 					</tbody>
 				</table>
-				<p>Behaalde studiepunten: <b>0</b>/60EP</p>
+				<p>Behaalde studiepunten: <b>0</b>/60EP</p><meter min="0" max="60" value="0" low="45" optimum="60"></meter>
 			</article>
 		</main>
 	</body>
