--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
 		<meta name="description" content="De homepagina van een site voor de opleiding HBO-ICT." />
 		<title>Home</title>
 		<link rel="stylesheet" href="/style/index.css">
+		<link rel="icon" type="image/xml+svg" href="/images/favicon.svg">
 	</head>
 	<body>
 		<nav>
-			<div><a href="/index.html" data-huidig>home</a></div>
-			<div><a href="/profile.html">profiel</a></div>
+			<div><a href="/index.html" data-huidig>Home</a></div>
+			<div><a href="/profile.html">Profiel</a></div>
 			<div><a href="/faq.html">FAQ</a></div>
-			<div><a href="/dashboard.html">dashboard</a></div>
-			<div><a href="/blog.html">blog</a></div>
+			<div><a href="/dashboard.html">Dashboard</a></div>
+			<div><a href="/blog.html">Blog</a></div>
 		</nav>
 		<main>
 			<aside class="linkerlinks">
@@ -30,7 +31,7 @@
 			<article>
 				<h1>Homepagina</h1>
 				<p>
-					Nou, dit is de homepagina! Ik doe ICT omdat ik al best lang aan het programmeren ben, daarom vind ik dat het bij mij past. In <a href="https://glaze-donut-5a5.notion.site/Assignment-Specification-661c5ac5d7494328a58be61d00dd41e4#cc1ba35721f641519cd8ae4df9069380">de opdracht</a> staat dat we op moeten schrijven wat we de afgelopen periode hebben geleerd, maar de periode is net twee dagen begonnen, dus nee.
+					Nou, dit is de homepagina! Ik doe ICT omdat ik al best lang aan het programmeren ben, daarom vind ik dat het bij mij past. Waarom ik daar lang geleden mee was begonnen weet ik niet. Ik ben hier om dat het dicht bij is. Dan kan ik gweoon lekker thuis blijven wonen. Dit is voor mij goed, want ik houd niet van reizen. Bovendien is programmeren een betere optie dan economie of geschiedenis, want ik ben er beter in. Op de basisschool heb ik dit gedaan met <i>Tristan</i>: <a href="https://scratch.mit.edu/projects/90762407/">https://scratch.mit.edu/projects/90762407/</a>. In <a href="https://glaze-donut-5a5.notion.site/Assignment-Specification-661c5ac5d7494328a58be61d00dd41e4#cc1ba35721f641519cd8ae4df9069380">de opdracht</a> staat dat we op moeten schrijven wat we de afgelopen periode hebben geleerd, maar de periode is net vijf dagen begonnen, dus nee.
 				</p>
 				<p>
 					Deze pagina is niet per sé heel nuttig, zoals heel deze web-site. De opdracht vraagt creatief schrijven, wat ik helemaal niet kan. Verder moet ik plaatjes en een lijstje hebben, dus krijgt u nu een ranking van de <a href="https://nl.wikipedia.org/wiki/Nummer">nummers</a> één tot vier. Daarna is het tijd voor wat foto's.
