--- a/dashboard.html
+++ b/dashboard.html
@@ -7,14 +7,15 @@
 		<meta name="description" content="Een pagina waarop te zien is hoever Adriaan is met zijn opleiding." />
 		<title>Dashboard</title>
 		<link rel="stylesheet" href="/style/index.css">
+		<link rel="icon" type="image/xml+svg" href="/images/favicon.svg">
 	</head>
 	<body>
 		<nav>
-			<div><a href="/index.html">home</a></div>
-			<div><a href="/profile.html">profiel</a></div>
+			<div><a href="/index.html">Home</a></div>
+			<div><a href="/profile.html">Profiel</a></div>
 			<div><a href="/faq.html">FAQ</a></div>
-			<div><a href="/dashboard.html" data-huidig>dashboard</a></div>
-			<div><a href="/blog.html">blog</a></div>
+			<div><a href="/dashboard.html" data-huidig>Dashboard</a></div>
+			<div><a href="/blog.html">Blog</a></div>
 		</nav>
 		<main>
 		<article>
@@ -31,11 +32,11 @@
 						<th>Cijfer</th>
 					</tr>
 					<tr>
-						<td colspan="6"><center><b>1<sup>e</sup> Semester</b></center></td>
+						<td colspan="6" class="sh"><center><b>1<sup>e</sup> Semester</b></center></td>
 					</tr>
-					<tr>
-						<td rowspan="3" data-huidig>1</td>
-						<td data-huidig>PCO</td>
+					<tr data-huidig>
+						<td rowspan="3">1</td>
+						<td>PCO</td>
 						<td>presentatie</td>
 						<td>41/42 (44)</td>
 						<td>2.5</td>
@@ -76,7 +77,7 @@
 						<td></td>
 					</tr>
 					<tr>
-						<td colspan="6"><center><b>2<sup>e</sup> Semester</b></center></td>
+						<td colspan="6" class="sh"><center><b>2<sup>e</sup> Semester</b></center></td>
 					</tr>
 						<td rowspan="5">3</td>
 						<td>BCIB</td>
@@ -131,7 +132,7 @@
 						<td></td>
 					</tr>
 					<tr>
-						<td colspan="6"><center><b>Personality</b></center></td>
+						<td colspan="6" class="sh"><center><b>Personality</b></center></td>
 					</tr>
 						<td rowspan="2">Hele Jaar</td>
 						<td colspan="3" rowspan="2"><center>?</center></td>
