--- a/profile.html
+++ b/profile.html
@@ -7,14 +7,15 @@
 		<meta name="description" content="Het profiel van Adriaan Zwemer." />
 		<title>Mijn profiel</title>
 		<link rel="stylesheet" href="/style/index.css">
+		<link rel="icon" type="image/xml+svg" href="/images/favicon.svg">
 	</head>
 	<body>
 		<nav>
-			<div><a href="/index.html">home</a></div>
-			<div><a href="/profile.html" data-huidig>profiel</a></div>
+			<div><a href="/index.html">Home</a></div>
+			<div><a href="/profile.html" data-huidig>Profiel</a></div>
 			<div><a href="/faq.html">FAQ</a></div>
-			<div><a href="/dashboard.html">dashboard</a></div>
-			<div><a href="/blog.html">blog</a></div>
+			<div><a href="/dashboard.html">Dashboard</a></div>
+			<div><a href="/blog.html">Blog</a></div>
 		</nav>
 		<main>
 			<aside class="linkerlinks">
