Feedback verwerken - margins beetje veranderen - geen details gebruiken op blogoverzicht - blog knop blijft gehighlight op blogpagina's - classnames beetje in dezelfde stijl gedaan - image height vervangen waar mogelijk -

--- a/blog.html
+++ b/blog.html
@@ -20,12 +20,12 @@
 		<main>
 			<article>
 				<h1>Blogposts</h1>
-				<ol><!-- Helaas werken deze details-elementen niet in IE 😢 -->
-					<li><details><summary>Studiekeuze (<a href="/blog/skc.html">lees</a>)</summary>Nou, ik heb voor HBO-ICT gekozen...</details></li>
-					<li><details><summary>SWOT-analyse (<a href="/blog/swot.html">lees</a>)</summary>Een SWOT-analyse is wat onzin die we moesten invullen...</details></li>
-					<li><details><summary>Ervaring (<a href="/blog/ervaring.html">lees</a>)</summary>Ik heb mijn pws bij informatica gedaan...</details></li>
-					<li><details><summary>Feedback (<a href="/blog/feedback.html">lees</a>)</summary>De feedback van Daan de Waard heeft erg weinig entertjes...</details></li>
-					<li><details><summary>Het vak ICT (<a href="/blog/vak.html">lees</a>)</summary>ICT is een belangrijk vak...</details></li>
+				<ol>
+					<li><b>Studiekeuze (<a href="/blog/skc.html">lees</a>)</b></br>Nou, ik heb voor HBO-ICT gekozen...</li>
+					<li><b>SWOT-analyse (<a href="/blog/swot.html">lees</a>)</b></br>Een SWOT-analyse is wat onzin die we moesten invullen...</li>
+					<li><b>Ervaring (<a href="/blog/ervaring.html">lees</a>)</b></br>Ik heb mijn pws bij informatica gedaan...</li>
+					<li><b>Feedback (<a href="/blog/feedback.html">lees</a>)</b></br>De feedback van Daan de Waard heeft erg weinig entertjes...</li>
+					<li><b>Het vak ICT (<a href="/blog/vak.html">lees</a>)</b></br>ICT is een belangrijk vak...</li>
 				</ol>
 			</article>
 		</main>
