--- a/faq.html
+++ b/faq.html
@@ -19,27 +19,27 @@
 		</nav>
 		<main>
 			<article>
-				<figure class="figuurrechts" style="width:80px"><img src="/images/hz-logo.svg" width="80" alt="Het logo van de HZ"><figcaption>Het logo van de HZ</figcaption></figure>
+				<figure class="figuur-rechts" style="width:80px"><img src="/images/hz-logo.svg" width="80" alt="Het logo van de HZ"><figcaption>Het logo van de HZ</figcaption></figure>
 				<h1>Veelgestelde vragen</h1>
 				<hr>
 				<section>
-					<details><summary><b class="ietsjeGroter">Hoe print ik op de hz?</b></summary>Ga naar <a href="https://hz.mynetpay.nl/">https://hz.mynetpay.nl/</a>. Log daar in met je schoolaccount (zonder @hz.nl).<br>Je kan een bestand uploaden bij <i>WebPrint</i> of de printer installeren bij <i>MobilityPrint</i>.<br><b>Let op! Om te printen moet je printtegoed hebben.</b><br>Voor meer informatie, ga naar het <a href="https://hzuniversity.topdesk.net/tas/public/ssp/content/detail/service?unid=bd81be42f243450e95e510949a496145">selfservice-portaal</a>.</details>
+					<details><summary><b class="ietsje-groter">Hoe print ik op de hz?</b></summary>Ga naar <a href="https://hz.mynetpay.nl/">https://hz.mynetpay.nl/</a>. Log daar in met je schoolaccount (zonder @hz.nl).<br>Je kan een bestand uploaden bij <i>WebPrint</i> of de printer installeren bij <i>MobilityPrint</i>.<br><b>Let op! Om te printen moet je printtegoed hebben.</b><br>Voor meer informatie, ga naar het <a href="https://hzuniversity.topdesk.net/tas/public/ssp/content/detail/service?unid=bd81be42f243450e95e510949a496145">selfservice-portaal</a>.</details>
 				</section>
 				<hr>
 				<section>
-					<details><summary><b class="ietsjeGroter">Hoe bestel ik iets op de HZ-webshop?</b></summary>Ga naar <a href="https://webshop.hz.nl/">https://webshop.hz.nl/</a>. Log in. Zoek daarna het produkt dat je wil kopen, selecteer de optie die je wil (bijv. kleur, maat, aantal) en druk dan op <i>Toevoegen aan winkelwagen</i>. Ga daarna naar <i>WINKELWAGEN</i> bovenin. Druk dan op afrekenen. Kies je betaalwijze. Druk op <i>Volgende</i> en volg de instructies op je scherm.</details>
+					<details><summary><b class="ietsje-groter">Hoe bestel ik iets op de HZ-webshop?</b></summary>Ga naar <a href="https://webshop.hz.nl/">https://webshop.hz.nl/</a>. Log in. Zoek daarna het produkt dat je wil kopen, selecteer de optie die je wil (bijv. kleur, maat, aantal) en druk dan op <i>Toevoegen aan winkelwagen</i>. Ga daarna naar <i>WINKELWAGEN</i> bovenin. Druk dan op afrekenen. Kies je betaalwijze. Druk op <i>Volgende</i> en volg de instructies op je scherm.</details>
 				</section>
 				<hr>
 				<section>
-					<details><summary><b class="ietsjeGroter">Hoe reserveer ik een projectruimte?</b></summary>Ga naar <a href="https://hzuniversity.topdesk.net/">het selfservice-portaal</a>. Ga naar <i>Reserveren</i> &gt; <i>Reserveer een vergader of project ruimte</i> (ja, met taalfout). Druk op <i>Reserveer een ruimte</i>. Selecteer daar welke ruimte en wanner (door over de tabel te slepen). Klik op volgende. Vul daar in wat je in moet vullen en bevestig de reservering.</details>
+					<details><summary><b class="ietsje-groter">Hoe reserveer ik een projectruimte?</b></summary>Ga naar <a href="https://hzuniversity.topdesk.net/">het selfservice-portaal</a>. Ga naar <i>Reserveren</i> &gt; <i>Reserveer een vergader of project ruimte</i> (ja, met taalfout). Druk op <i>Reserveer een ruimte</i>. Selecteer daar welke ruimte en wanner (door over de tabel te slepen). Klik op volgende. Vul daar in wat je in moet vullen en bevestig de reservering.</details>
 				</section>
 				<hr>
 				<section>
-					<details><summary><b class="ietsjeGroter">Hoe scan ik iets?</b></summary>Ga naar een scanner/printer. Log in (met pas of gebruikersnaam en wachtwoord). Druk op <i>Scan</i>. Als je dubbelzijdig wil scannen ga je naar de instellingen en zet je de <i>duplex mode</i> op <i>2-sided</i>. Leg je papieren waar ze horen en druk op <i>Start</i>. Log daarna weer uit (rechtsboven).</details>
+					<details><summary><b class="ietsje-groter">Hoe scan ik iets?</b></summary>Ga naar een scanner/printer. Log in (met pas of gebruikersnaam en wachtwoord). Druk op <i>Scan</i>. Als je dubbelzijdig wil scannen ga je naar de instellingen en zet je de <i>duplex mode</i> op <i>2-sided</i>. Leg je papieren waar ze horen en druk op <i>Start</i>. Log daarna weer uit (rechtsboven).</details>
 				</section>
 				<hr>
 				<section>
-					<details><summary><b class="ietsjeGroter">Waar zet ik m'n auto?</b></summary>Het is niet mogelijk om direct bij de HZ aan Het Groene Woud te parkeren. Op het terrein is 1 speciale parkeerplaats voor mensen met een beperking en/of chronische aandoening beschikbaar.<br>In de parkeergarage aan de Kousteensedijk zijn een aantal plekken voor bezoekers, medewerkers en studenten van Het Groene Woud. Deze parkeergarage bevindt zich op 8 minuten loopafstand van de HZ. Op vertoon van je inrijkaart kun je dan bij de servicebalie van het JRCZ een uitrijkaart krijgen.</details>
+					<details><summary><b class="ietsje-groter">Waar zet ik m'n auto?</b></summary>Het is niet mogelijk om direct bij de HZ aan Het Groene Woud te parkeren. Op het terrein is 1 speciale parkeerplaats voor mensen met een beperking en/of chronische aandoening beschikbaar.<br>In de parkeergarage aan de Kousteensedijk zijn een aantal plekken voor bezoekers, medewerkers en studenten van Het Groene Woud. Deze parkeergarage bevindt zich op 8 minuten loopafstand van de HZ. Op vertoon van je inrijkaart kun je dan bij de servicebalie van het JRCZ een uitrijkaart krijgen.</details>
 				</section>
 				<hr>
 				<div id="plekvulling">Nog meer vragen zijn welkom (maar antwoorden niet gegarandeerd).</div>
