--- a/profile.html
+++ b/profile.html
@@ -18,7 +18,7 @@
 			<div><a href="/blog.html">Blog</a></div>
 		</nav>
 		<main>
-			<aside class="linkerlinks">
+			<aside class="linker-links">
 				Linkjes:
 				<ul>
 					<li><a href="https://github.com/JA-Zw" target="_blank">GitHub</a></li>
@@ -42,8 +42,8 @@
 			<hr />
 			<article>
 				<h2>Persoonlijke Informatie</h2>
-				<figure class="figuurrechts"><img src="/images/Pasfoto000101015.jpg" alt="Een pasfoto"> <figcaption>Een pasfoto ofzo</figcaption></figure>
-				<i>De &quot;Wie ben ik?&quot;-enquete heeft geen kopjes - of: niet als je de antwoorden bekijkt - dus ik weet niet waar dit stopt.</i>
+				<figure class="figuur-rechts"><img src="/images/Pasfoto000101015.jpg" alt="Een pasfoto"> <figcaption>Een pasfoto ofzo</figcaption></figure>
+				<p><i>De &quot;Wie ben ik?&quot;-enquete heeft geen kopjes - of: niet als je de antwoorden bekijkt - dus ik weet niet waar dit stopt.</i></p>
 				<p><b>Wat is je naam?</b><br>Adriaan Zwemer</p>
 				<p><b>Wat is je leeftijd?</b><br>18 (<i>bij invullen enquete 17</i>)</p>
 				<p><b>Welk profiel heb je op je vooropleiding afgerond?</b><br>EM</p>
@@ -56,11 +56,11 @@
 			<hr />
 			<article>
 				<h2>Buitenschoolse Activiteiten</h2>
-				<i>Ik neem aan dat dat deel hier begint.</i>
+				<p><i>Ik neem aan dat dat deel hier begint.</i></p>
 				<p><b>Heb je een (bij)baan?</b><br>Ja, esv, maar vrij weinig</p>
 				<p><b>Hoeveel uur in de week besteed je aan je (bij)baan?</b><br>0-5</p>
 				<p><b>Heb je bijvoorbeeld een hobby of interesse die je zou willen delen?</b><br>Nee</p>
-				<i>Ik neem aan dat dit de laatste vraag van dit deel was, want hiernaa begint een SWOT-analyse.</i>
+				<p><i>Ik neem aan dat dit de laatste vraag van dit deel was, want hiernaa begint een SWOT-analyse.</i></p>
 			</article>
 			<hr />
 			<article>
