--- a/dashboard.html
+++ b/dashboard.html
@@ -19,7 +19,7 @@
 		</nav>
 		<main>
 		<article>
-				<figure class="figuurrechts"><img src="/images/Grafiekje.svg" style="background-color:white;" alt="Een grafiekje zonder data" /><figcaption><span style="color:#00aeef;">█</span> Hoop<br><span style="color:#ff0025;">█</span> Veilig voor NBSA</figcaption></figure>
+				<figure class="figuur-rechts"><img src="/images/Grafiekje.svg" style="background-color:white;" alt="Een grafiekje zonder data" /><figcaption><span style="color:#00aeef;">█</span> Hoop<br><span style="color:#ff0025;">█</span> Veilig voor NBSA</figcaption></figure>
 				<h1>Dashboard</h1>
 				<table>
 					<tbody>
@@ -32,7 +32,7 @@
 						<th>Cijfer</th>
 					</tr>
 					<tr>
-						<td colspan="6" class="sh"><center><b>1<sup>e</sup> Semester</b></center></td>
+						<td colspan="6" class="sh"><b>1<sup>e</sup> Semester</b></td>
 					</tr>
 					<tr data-huidig>
 						<td rowspan="3">1</td>
@@ -42,14 +42,14 @@
 						<td>2.5</td>
 						<td></td>
 					</tr>
-					<tr>
+					<tr data-huidig>
 						<td>CSB</td>
 						<td rowspan="2">toets</td>
 						<td rowspan="2">44 (50)</td>
 						<td>5</td>
 						<td></td>
 					</tr>
-					<tr>
+					<tr data-huidig>
 						<td>PBA</td>
 						<td>5</td>
 						<td></td>
@@ -77,7 +77,7 @@
 						<td></td>
 					</tr>
 					<tr>
-						<td colspan="6" class="sh"><center><b>2<sup>e</sup> Semester</b></center></td>
+						<td colspan="6" class="sh"><b>2<sup>e</sup> Semester</b></td>
 					</tr>
 						<td rowspan="5">3</td>
 						<td>BCIB</td>
@@ -132,10 +132,10 @@
 						<td></td>
 					</tr>
 					<tr>
-						<td colspan="6" class="sh"><center><b>Personality</b></center></td>
+						<td colspan="6" class="sh"><b>Personality</b></td>
 					</tr>
 						<td rowspan="2">Hele Jaar</td>
-						<td colspan="3" rowspan="2"><center>?</center></td>
+						<td colspan="3" rowspan="2" style="text-align: center;">?</td>
 						<td>1.25</td>
 						<td></td>
 					</tr>
