--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div><a href="/blog.html">Blog</a></div>
 		</nav>
 		<main>
-			<aside class="linkerlinks">
+			<aside class="linker-links">
 				Hier wat random linkjes
 				<ul>
 					<li><a href="https://hz.oerwrite.nl/rails/active_storage/blobs/redirect/eyJfcmFpbHMiOnsibWVzc2FnZSI6IkJBaEpJaWt3TURNMk5qTTBOaTFpTVdZMkxUUmpZVEV0WVRoaVlTMDNZekprTURCa09EVTNNekVHT2daRlZBPT0iLCJleHAiOm51bGwsInB1ciI6ImJsb2JfaWQifX0=--a488b20110ad0c3d8659cc0d2850543428fbbb45/ur-b-dt-hbo-ict.pdf">UR</a></li>
@@ -42,8 +42,8 @@
 					<li>Drie</li>
 					<li>Vier</li>
 				</ol>
-				<img src="/images/CRW_1161.jpg" alt="Een foto met een voetbalveld in Serooskerke, en de molen en grote kerk van Veere." height="325">
-				<img src="/images/CRW_1165.jpg" alt="Een foto van de Zeeuwse vlag." height="325">
+				<img src="/images/CRW_1161.jpg" alt="Een foto met een voetbalveld in Serooskerke, en de molen en grote kerk van Veere." class="foto-homepagina">
+				<img src="/images/CRW_1165.jpg" alt="Een foto van de Zeeuwse vlag." class="foto-homepagina">
 			</article>
 		</main>
 	</body>
